# community-captioner-v10

./: .gitignore  App.tsx  BUILD-WINDOWS.md  CAPTION_INTEGRATION.md  CLAUDE.md  README.md  dockerignore.txt  gitignore.txt  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
.claude/: launch.json
.github/workflows/: build-windows-addon.yml
components/: Analytics.tsx  AudienceView.tsx  CaptionInjection.tsx  ContextEngine.tsx  Dashboard.tsx  GlobalSettings.tsx  HighlightStudio.tsx  LandingPage.tsx  LocalSetup.tsx  OutputSettings.tsx  Overlay.tsx  PrerecordedStudio.tsx
distribution/windows-extras/: SETUP.md  setup-decklink.bat
electron/: entitlements.mac.plist  main.js  preload.js
native/decklink/: CMakeLists.txt
native/decklink/src/: addon.cpp  device_manager.cpp  device_manager.h  input_handler.cpp  input_handler.h  ndi_passthrough.cpp  ndi_passthrough.h  output_handler.cpp  output_handler.h  passthrough.cpp  passthrough.h  platform.h  vanc_packet.cpp  vanc_packet.h
scripts/: build-app.js  build-decklink-windows.ps1
server/: caption-polisher.js  context-learner.js  relay.js  translation-service.js
server/cea708/: cea608-encoder.js  cea708-cdp-builder.js  dtvcc-encoder.js  index.js
services/: geminiService.ts  googleDriveService.ts  localAIService.ts
test/: test-cea708.mjs
utils/: i18n.ts
